
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UInt32 ;
typedef int BoolInt ;


 int False ;
 int True ;





__attribute__((used)) static BoolInt IS_MAIN_METHOD(UInt32 m)
{
  switch (m)
  {
    case 131:
    case 130:

    case 129:




      return True;
  }
  return False;
}
